--- a/DQD_mohit.ipynb
+++ b/DQD_mohit.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "v1inEJB4nYz9",
         "colab_type": "code",
-        "outputId": "dc7cc44a-8cac-4111-f5e8-ba635eb5e0c4",
+        "outputId": "43118d23-0f7e-487b-b33e-fa92ddf5a94b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -40,7 +40,7 @@
       "source": [
         "print(\"TEST COLAB AND GITHUB INTEGRATION\")"
       ],
-      "execution_count": 22,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,21 +56,25 @@
       "metadata": {
         "id": "GfH5THzI5W5u",
         "colab_type": "code",
-        "outputId": "e548752c-1e39-4aef-83f9-88c7ddc73947",
+        "outputId": "9a695f6a-dbf3-48dc-c58a-2b343b781318",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 125
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive', force_remount=True)"
       ],
-      "execution_count": 23,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
             "Mounted at /content/drive\n"
           ],
           "name": "stdout"
@@ -82,7 +86,7 @@
       "metadata": {
         "id": "HC73OLu4CbLy",
         "colab_type": "code",
-        "outputId": "7527a49b-d27b-4e52-da91-f189e9ac6deb",
+        "outputId": "8ac460fc-0c6c-480b-f799-d6b2d53b773c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
@@ -91,7 +95,7 @@
       "source": [
         "!ls '/content/drive/My Drive'"
       ],
-      "execution_count": 24,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +149,7 @@
       "metadata": {
         "id": "wHmZqftzEt0V",
         "colab_type": "code",
-        "outputId": "3bc6af5f-299a-472d-8626-6d7634463fd1",
+        "outputId": "51b68c93-5d0f-494b-f9e7-1350feae2a6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 343
@@ -154,7 +158,7 @@
       "source": [
         "df.head(10)"
       ],
-      "execution_count": 27,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +304,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 10
         }
       ]
     },
@@ -309,7 +313,7 @@
       "metadata": {
         "id": "JmwmXpUjQS8N",
         "colab_type": "code",
-        "outputId": "cf568bcd-1af4-4a46-d66a-1f5be1889d10",
+        "outputId": "e4d22fa5-b6cd-4fe0-d987-33a0b8acdaf5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -318,7 +322,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 28,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -414,7 +418,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 11
         }
       ]
     },
@@ -423,7 +427,7 @@
       "metadata": {
         "id": "LPA0KH6JRP2W",
         "colab_type": "code",
-        "outputId": "26ecf125-bbcc-4a35-a911-547718c54f5a",
+        "outputId": "45a4b074-9739-4d5b-d954-74c653f2d386",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -435,7 +439,7 @@
         "print(re.sub(r\"[a-z]\",'','ab1c3'))\n",
         "print(re.sub(r\"[^a-z]\",'','ab1c3'))"
       ],
-      "execution_count": 29,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,7 +457,7 @@
       "metadata": {
         "id": "kHBkX6jP4Y4t",
         "colab_type": "code",
-        "outputId": "4930305d-9006-47d9-fd40-9ec2328aa011",
+        "outputId": "96377a7d-2ab0-4ae1-b3a8-675e84af549e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 302
@@ -463,19 +467,19 @@
         "import seaborn as sns\n",
         "sns.countplot(df['is_duplicate'],label='count')"
       ],
-      "execution_count": 30,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f7e09067048>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f145c429438>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 13
         },
         {
           "output_type": "display_data",
@@ -496,7 +500,7 @@
       "metadata": {
         "id": "QntA_TBt46Ud",
         "colab_type": "code",
-        "outputId": "686a7d98-b405-4c15-bcfd-a5d88b2cb755",
+        "outputId": "5f4f698c-472f-4580-ff1e-d7b4efe1f5b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -505,7 +509,7 @@
       "source": [
         "len(df[df['is_duplicate']==0])"
       ],
-      "execution_count": 31,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -517,7 +521,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 14
         }
       ]
     },
@@ -526,7 +530,7 @@
       "metadata": {
         "id": "gaRACVFVBpGB",
         "colab_type": "code",
-        "outputId": "4a15c1ff-02e2-42de-835a-698daf81cfe7",
+        "outputId": "31e13fc0-8540-49af-bc6e-c0c6dd18e69b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -536,7 +540,7 @@
         "#iloc selects using index of [row,column/s] as integer values\n",
         "df.iloc[1,[3,4]]"
       ],
-      "execution_count": 32,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -550,7 +554,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 15
         }
       ]
     },
@@ -559,7 +563,7 @@
       "metadata": {
         "id": "yN2RvuK1Dcev",
         "colab_type": "code",
-        "outputId": "0d89cf04-4090-4ca5-d804-671b183dc7b6",
+        "outputId": "ece19ed7-0051-4afc-d8a1-5fab00a0021c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -569,7 +573,7 @@
         "# loc selects using index value and label name/s\n",
         "df.loc[1,['question1','question2']]"
       ],
-      "execution_count": 33,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -583,7 +587,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 16
         }
       ]
     },
@@ -605,40 +609,23 @@
       "metadata": {
         "id": "HFCsWfS8DsG7",
         "colab_type": "code",
-        "outputId": "7002d031-d12b-4a18-b26a-524f5179a37e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "ques1=df.loc[:,'question1']\n",
-        "ques1=str(ques1)\n",
-        "ques1=ques1.split()\n",
-        "ques1[-2]"
+        "# ques1=str(ques1)\n",
+        "# ques1=ques1.split()\n",
+        "# ques1[-2]\n"
       ],
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'dtype:'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 34
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "kcs65qYCGy7i",
         "colab_type": "code",
-        "outputId": "6a2b4f77-0ecb-4792-b26d-40e2093c3fec",
+        "outputId": "e55e5cb0-0fd5-4899-a311-b66208df83c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -647,7 +634,7 @@
       "source": [
         "len(ques1)"
       ],
-      "execution_count": 35,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -659,7 +646,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 18
         }
       ]
     },
@@ -668,11 +655,11 @@
       "metadata": {
         "id": "45dHIvAXIZWK",
         "colab_type": "code",
+        "outputId": "c762f694-36d1-427c-a9b1-950a36bc6e71",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 422
-        },
-        "outputId": "fed520ed-f66f-4b68-de3e-405f16c2f6e5"
+          "height": 494
+        }
       },
       "source": [
         "from tensorflow.keras.layers import Input, Embedding, LSTM, Dense, concatenate\n",
@@ -715,28 +702,31 @@
         "\n",
         "# print('end')"
       ],
-      "execution_count": 45,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/resource_variable_ops.py:435: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Colocations handled automatically by placer.\n",
             "__________________________________________________________________________________________________\n",
             "Layer (type)                    Output Shape         Param #     Connected to                     \n",
             "==================================================================================================\n",
-            "input_17 (InputLayer)           (None, 50)           0                                            \n",
+            "input_1 (InputLayer)            (None, 50)           0                                            \n",
             "__________________________________________________________________________________________________\n",
-            "input_18 (InputLayer)           (None, 50)           0                                            \n",
+            "input_2 (InputLayer)            (None, 50)           0                                            \n",
             "__________________________________________________________________________________________________\n",
-            "embedding_8 (Embedding)         (None, 50, 300)      300000      input_17[0][0]                   \n",
-            "                                                                 input_18[0][0]                   \n",
+            "embedding (Embedding)           (None, 50, 300)      300000      input_1[0][0]                    \n",
+            "                                                                 input_2[0][0]                    \n",
             "__________________________________________________________________________________________________\n",
-            "lstm_8 (LSTM)                   (None, 50)           70200       embedding_8[0][0]                \n",
-            "                                                                 embedding_8[1][0]                \n",
+            "lstm (LSTM)                     (None, 50)           70200       embedding[0][0]                  \n",
+            "                                                                 embedding[1][0]                  \n",
             "__________________________________________________________________________________________________\n",
-            "concatenate_8 (Concatenate)     (None, 100)          0           lstm_8[0][0]                     \n",
-            "                                                                 lstm_8[1][0]                     \n",
+            "concatenate (Concatenate)       (None, 100)          0           lstm[0][0]                       \n",
+            "                                                                 lstm[1][0]                       \n",
             "__________________________________________________________________________________________________\n",
-            "dense_8 (Dense)                 (None, 1)            101         concatenate_8[0][0]              \n",
+            "dense (Dense)                   (None, 1)            101         concatenate[0][0]                \n",
             "==================================================================================================\n",
             "Total params: 370,301\n",
             "Trainable params: 370,301\n",
@@ -770,6 +760,137 @@
       "cell_type": "code",
       "metadata": {
         "id": "JEks7d-D0HSv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "051b945c-880c-4198-8834-e73db845622f"
+      },
+      "source": [
+        "txt='A IS a dog a is.'\n",
+        "\n",
+        "from tensorflow.keras.preprocessing.text import text_to_word_sequence,Tokenizer,one_hot,hashing_trick\n",
+        "print(txt)\n",
+        "# tokenizer=Tokenizer(lower=True, split=' ')\n",
+        "print(text_to_word_sequence(txt,lower=True, split=' '))\n",
+        "print(hashing_trick(txt,n=10,lower=True,split=' '))\n",
+        "print(one_hot(txt,n=10,lower=True,split=' '))"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "A IS a dog a is.\n",
+            "['a', 'is', 'a', 'dog', 'a', 'is']\n",
+            "[8, 6, 8, 7, 8, 6]\n",
+            "[8, 6, 8, 7, 8, 6]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cb5M65IL8m87",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        },
+        "outputId": "5485d162-d774-4ab5-eb96-3104ab9c7ec7"
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "q1=df.question1[0:5]\n",
+        "q2=df.question2[0:5]\n",
+        "y=df.is_duplicate\n",
+        "\n",
+        "# print(q1)\n",
+        "# print(q2)\n",
+        "\n",
+        "\n",
+        "# q1=str(q1).lower()\n",
+        "# x1_train,x1_test,x2_train,y2_test = train_test_split([q1,q2],y,test_size=0.2,random_state=50)\n"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0    What is the step by step guide to invest in sh...\n",
+            "1    What is the story of Kohinoor (Koh-i-Noor) Dia...\n",
+            "2    How can I increase the speed of my internet co...\n",
+            "3    Why am I mentally very lonely? How can I solve...\n",
+            "4    Which one dissolve in water quikly sugar, salt...\n",
+            "Name: question1, dtype: object\n",
+            "0    What is the step by step guide to invest in sh...\n",
+            "1    What would happen if the Indian government sto...\n",
+            "2    How can Internet speed be increased by hacking...\n",
+            "3    Find the remainder when [math]23^{24}[/math] i...\n",
+            "4              Which fish would survive in salt water?\n",
+            "Name: question2, dtype: object\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mOJyssKKgA0B",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def text_to_token(text):\n",
+        "  text=str(text)\n",
+        "  text=text.lower()\n",
+        "  text=text.split()\n",
+        "  \n",
+        "  return text"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VjJh9IJ7gJXZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5ff7a35e-a3d6-43c8-d4c0-20a413037832"
+      },
+      "source": [
+        "# for i in range(len(q1)):\n",
+        "#   print(text_to_token(q1[i])) \n",
+        "\n",
+        "a=['asdfafd']\n",
+        "b='zzzz'\n",
+        "a.append(b)\n",
+        "print(a)"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['asdfafd', 'zzzz']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1nR21ej6t5Kg",
         "colab_type": "code",
         "colab": {}
       },
