--- a/DQD_mohit.ipynb
+++ b/DQD_mohit.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "v1inEJB4nYz9",
         "colab_type": "code",
-        "outputId": "43118d23-0f7e-487b-b33e-fa92ddf5a94b",
+        "outputId": "6588817a-650c-49b7-e8d2-9fa3f9602809",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -40,7 +40,7 @@
       "source": [
         "print(\"TEST COLAB AND GITHUB INTEGRATION\")"
       ],
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "GfH5THzI5W5u",
         "colab_type": "code",
-        "outputId": "9a695f6a-dbf3-48dc-c58a-2b343b781318",
+        "outputId": "1ce8e102-65bc-4aa7-f2d0-95f7663d191a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 125
@@ -66,7 +66,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive', force_remount=True)"
       ],
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "HC73OLu4CbLy",
         "colab_type": "code",
-        "outputId": "8ac460fc-0c6c-480b-f799-d6b2d53b773c",
+        "outputId": "b8897673-a9b5-4890-8854-e20d19b8bf8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
@@ -95,7 +95,7 @@
       "source": [
         "!ls '/content/drive/My Drive'"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "wHmZqftzEt0V",
         "colab_type": "code",
-        "outputId": "51b68c93-5d0f-494b-f9e7-1350feae2a6a",
+        "outputId": "6f5d15e0-48dc-4150-dee8-c2a87f1aca9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 343
@@ -158,7 +158,7 @@
       "source": [
         "df.head(10)"
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +304,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 6
         }
       ]
     },
@@ -313,7 +313,7 @@
       "metadata": {
         "id": "JmwmXpUjQS8N",
         "colab_type": "code",
-        "outputId": "e4d22fa5-b6cd-4fe0-d987-33a0b8acdaf5",
+        "outputId": "e87c9df6-694e-4cc5-e059-0724fff0b992",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -322,7 +322,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -418,7 +418,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 7
         }
       ]
     },
@@ -427,7 +427,7 @@
       "metadata": {
         "id": "LPA0KH6JRP2W",
         "colab_type": "code",
-        "outputId": "45a4b074-9739-4d5b-d954-74c653f2d386",
+        "outputId": "b1f32818-320c-4532-a55d-e746dac9c626",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -439,7 +439,7 @@
         "print(re.sub(r\"[a-z]\",'','ab1c3'))\n",
         "print(re.sub(r\"[^a-z]\",'','ab1c3'))"
       ],
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
       "metadata": {
         "id": "kHBkX6jP4Y4t",
         "colab_type": "code",
-        "outputId": "96377a7d-2ab0-4ae1-b3a8-675e84af549e",
+        "outputId": "5ae6cddf-3cf0-4502-b8eb-aa57d9186885",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 302
@@ -467,19 +467,19 @@
         "import seaborn as sns\n",
         "sns.countplot(df['is_duplicate'],label='count')"
       ],
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f145c429438>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f6ca189fd68>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -500,7 +500,7 @@
       "metadata": {
         "id": "QntA_TBt46Ud",
         "colab_type": "code",
-        "outputId": "5f4f698c-472f-4580-ff1e-d7b4efe1f5b6",
+        "outputId": "4ba02774-af4f-42ab-9781-e1ab03378d75",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -509,7 +509,7 @@
       "source": [
         "len(df[df['is_duplicate']==0])"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -521,7 +521,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 10
         }
       ]
     },
@@ -530,7 +530,7 @@
       "metadata": {
         "id": "gaRACVFVBpGB",
         "colab_type": "code",
-        "outputId": "31e13fc0-8540-49af-bc6e-c0c6dd18e69b",
+        "outputId": "9761afac-6e53-4570-bc34-f2543381ce40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -540,7 +540,7 @@
         "#iloc selects using index of [row,column/s] as integer values\n",
         "df.iloc[1,[3,4]]"
       ],
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +554,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 11
         }
       ]
     },
@@ -563,7 +563,7 @@
       "metadata": {
         "id": "yN2RvuK1Dcev",
         "colab_type": "code",
-        "outputId": "ece19ed7-0051-4afc-d8a1-5fab00a0021c",
+        "outputId": "4d7948cd-9f73-4954-b475-9e3502ba3baa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -573,7 +573,7 @@
         "# loc selects using index value and label name/s\n",
         "df.loc[1,['question1','question2']]"
       ],
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +587,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -625,7 +625,7 @@
       "metadata": {
         "id": "kcs65qYCGy7i",
         "colab_type": "code",
-        "outputId": "e55e5cb0-0fd5-4899-a311-b66208df83c7",
+        "outputId": "e6574c1b-aef7-478d-cf92-cbad13d8d5a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -634,19 +634,19 @@
       "source": [
         "len(ques1)"
       ],
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "551"
+              "404290"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 14
         }
       ]
     },
@@ -655,7 +655,7 @@
       "metadata": {
         "id": "45dHIvAXIZWK",
         "colab_type": "code",
-        "outputId": "c762f694-36d1-427c-a9b1-950a36bc6e71",
+        "outputId": "477eb702-297a-4b0f-9dee-e5883f29829a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 494
@@ -685,11 +685,20 @@
         "left_output = shared_lstm(encoded_left)\n",
         "right_output = shared_lstm(encoded_right)\n",
         "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# TODO: use lambda layer to merge shared LSTMs using Manhattan distance function and remove merge_layer and output_layer(dense layer)\n",
+        "\n",
         "# merge shared LSTMs\n",
         "merge_layer = concatenate([left_output, right_output])\n",
         "\n",
         "# output dense layer\n",
         "output_layer = Dense(1, activation='sigmoid')(merge_layer)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "# define the model\n",
         "model = tf.keras.Model(inputs=[left_input, right_input], outputs=output_layer)\n",
@@ -702,7 +711,7 @@
         "\n",
         "# print('end')"
       ],
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,11 +770,11 @@
       "metadata": {
         "id": "JEks7d-D0HSv",
         "colab_type": "code",
+        "outputId": "258ea2de-f03d-463b-b76b-8feadbeebe49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
-        },
-        "outputId": "051b945c-880c-4198-8834-e73db845622f"
+        }
       },
       "source": [
         "txt='A IS a dog a is.'\n",
@@ -777,15 +786,15 @@
         "print(hashing_trick(txt,n=10,lower=True,split=' '))\n",
         "print(one_hot(txt,n=10,lower=True,split=' '))"
       ],
-      "execution_count": 24,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "A IS a dog a is.\n",
             "['a', 'is', 'a', 'dog', 'a', 'is']\n",
-            "[8, 6, 8, 7, 8, 6]\n",
-            "[8, 6, 8, 7, 8, 6]\n"
+            "[9, 4, 9, 1, 9, 4]\n",
+            "[9, 4, 9, 1, 9, 4]\n"
           ],
           "name": "stdout"
         }
@@ -796,11 +805,7 @@
       "metadata": {
         "id": "Cb5M65IL8m87",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 228
-        },
-        "outputId": "5485d162-d774-4ab5-eb96-3104ab9c7ec7"
+        "colab": {}
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -816,27 +821,8 @@
         "# q1=str(q1).lower()\n",
         "# x1_train,x1_test,x2_train,y2_test = train_test_split([q1,q2],y,test_size=0.2,random_state=50)\n"
       ],
-      "execution_count": 55,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0    What is the step by step guide to invest in sh...\n",
-            "1    What is the story of Kohinoor (Koh-i-Noor) Dia...\n",
-            "2    How can I increase the speed of my internet co...\n",
-            "3    Why am I mentally very lonely? How can I solve...\n",
-            "4    Which one dissolve in water quikly sugar, salt...\n",
-            "Name: question1, dtype: object\n",
-            "0    What is the step by step guide to invest in sh...\n",
-            "1    What would happen if the Indian government sto...\n",
-            "2    How can Internet speed be increased by hacking...\n",
-            "3    Find the remainder when [math]23^{24}[/math] i...\n",
-            "4              Which fish would survive in salt water?\n",
-            "Name: question2, dtype: object\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -861,11 +847,11 @@
       "metadata": {
         "id": "VjJh9IJ7gJXZ",
         "colab_type": "code",
+        "outputId": "c7c0cc80-52b1-498a-a973-78dbe2a03bf0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5ff7a35e-a3d6-43c8-d4c0-20a413037832"
+        }
       },
       "source": [
         "# for i in range(len(q1)):\n",
@@ -876,7 +862,7 @@
         "a.append(b)\n",
         "print(a)"
       ],
-      "execution_count": 72,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
